# Socs-Calendar-Parser

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  models.rs  parser.rs
