[package]
name = "socs-calendar-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
urlencoding = "2.1"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "aws_lc_rs",
] }
